--- a/roles/elk_stack/tasks/configure_filebeat.yml
+++ b/roles/elk_stack/tasks/configure_filebeat.yml
@@ -2,6 +2,14 @@
 - name: configure_filebeat | Load Vars
   include_vars: "main.yml"
 
+- name: configure_filebeat | See if Default Config File
+    lineinfile:
+    path: "{{ filebeat_conf }}"
+    line: "#output.logstash:"
+    state: absent
+  check_mode: true
+  register: conf
+
 - name: configure_filebeat | Configure Filebeat (Comment/Uncomment Required Fields)
   replace:
     path: "{{ filebeat_conf }}"
@@ -15,6 +23,8 @@
     - { regex: 'hosts: \["localhost:9200"]', replace: '#hosts: ["localhost:9200"]' }
     - { regex: "#output.logstash:", replace: "output.logstash:" }
     - { regex: '#hosts: \["localhost:5044"]', replace: 'hosts: ["{{ server_ip }}:{{ beat_port}}"]'}
+  when: (conf.changed) or (conf.failed)
+  notify: restart filebeat
 
 - name: configure_filebeat | Enables the beat's system module
   command: /usr/bin/filebeat modules enable system auditd
