--- a/roles/elk_stack/tasks/install_sw.yml
+++ b/roles/elk_stack/tasks/install_sw.yml
@@ -40,6 +40,7 @@
     - "{{ elastic_port }}/tcp"
     - "{{ kibana_port }}/tcp"
     - "{{ beat_port }}/tcp"
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
 
 - name: install_sw | Install Java (Debian Distros)
   apt:
