--- a/roles/elk_stack/tasks/install_sw.yml
+++ b/roles/elk_stack/tasks/install_sw.yml
@@ -5,13 +5,13 @@
       - java-1.8.0-openjdk
       - java-1.8.0-openjdk-devel
     state: latest
-  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat'
 
 - name: install_sw | Grab Public Signing Key (Red Hat Distros)
   rpm_key:
     state: present
     key: https://artifacts.elastic.co/GPG-KEY-elasticsearch
-  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat'
 
 - name: install_sw | Add Yum Repo (Red Hat Distros)
   yum_repository:
@@ -19,7 +19,8 @@
     baseurl: https://artifacts.elastic.co/packages/6.x/yum
     gpgcheck: true
     gpgkey: https://artifacts.elastic.co/GPG-KEY-elasticsearch
-  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+    description: Elastic 6.X Repo
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat'
 
 - name: install_sw | Install Elastic SW (Red Hat Distros)
   yum:
@@ -29,7 +30,7 @@
       - kibana
       - filebeat
     update_cache: true
-  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat'
   
 - name: install_sw | Open Firewall Ports (RedHat Distros)
   firewalld:
@@ -40,7 +41,7 @@
     - "{{ elastic_port }}/tcp"
     - "{{ kibana_port }}/tcp"
     - "{{ beat_port }}/tcp"
-  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
+  when: ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat'
 
 - name: install_sw | Install Java (Debian Distros)
   apt:
