--- a/roles/elk_stack/tasks/install_sw.yml
+++ b/roles/elk_stack/tasks/install_sw.yml
@@ -15,11 +15,11 @@
 
 - name: install_sw | Add Yum Repo (Red Hat Distros)
   yum_repository:
-    name: Elastic repository for 6.X packages
+    name: Elastic_6.X_repo
     baseurl: https://artifacts.elastic.co/packages/6.x/yum
     gpgcheck: true
     gpgkey: https://artifacts.elastic.co/GPG-KEY-elasticsearch
-    description: Elastic_6.X_Repo
+    description: Elastic 6.X Repo
   when: ansible_distribution == 'CentOS' or ansible_distribution == 'RedHat'
 
 - name: install_sw | Install Elastic SW (Red Hat Distros)
