Slight edits to pass ELK_Stack Vars to Beats Role for full automation.

--- a/roles/elk_stack/defaults/main.yml
+++ b/roles/elk_stack/defaults/main.yml
@@ -1,11 +1,13 @@
 ---
 # defaults file for ELK_Stack
+auditbeat_conf: /etc/auditbeat/auditbeat.yml
 beat_port: 5044
 curator_conf: /etc/curator/curator.yml
 curator_delete_conf: /etc/curator/delete_indices.yml
 delete_after_days: 365
 elastic_conf: /etc/elasticsearch/elasticsearch.yml
 elastic_port: 9200
+filebeat_conf: /etc/filebeat/filebeat.yml
 kibana_conf: /etc/kibana/kibana.yml
 kibana_port: 5601
 logstash_beat_conf: /etc/logstash/conf.d/01-beats-input.conf
