--- a/roles/elk_stack/defaults/main.yml
+++ b/roles/elk_stack/defaults/main.yml
@@ -18,3 +18,10 @@ logstash_sysfilter_conf: /etc/logstash/conf.d/10-syslog-filter.conf
 replicas: 0
 server_ip: localhost
 shards: 1
+
+#SSL Settings
+ssl_on: false
+cert_location: /etc/ssl/
+elastic_cert_location: /etc/elasticsearch/certs/
+kibana_cert_location: /etc/kibana/certs/
+logstash_cert_location: /etc/logstash/certs/
