--- a/roles/elk_stack/tasks/confiugre_curator.yaml
+++ b/roles/elk_stack/tasks/confiugre_curator.yaml
@@ -45,7 +45,7 @@
         1:
           action: delete_indices
           description: >-
-            Delete indices older than 10 days (based on index name), for logstash
+            Delete indices older than {{ delete_after_days }} days (based on index name), for logstash
             prefixed indices. Ignore the error if the filter does not result in an
             actionable list of indices (ignore_empty_list) and exit cleanly.
           options:
