--- a/roles/elk_stack/tasks/main.yml
+++ b/roles/elk_stack/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
 # tasks file for ELK_Stack
-- include: install_sw.yaml
+- include: install_sw_rhel.yaml
+  when: ansible_os_family == "RedHat"
+- include: install_sw_debian.yaml
+  when: ansible_os_family == "Debian"
 - include: configure_elastic.yaml
 - include: configure_kibana.yaml
 - include: configure_beats.yaml
