--- a/roles/elk_stack/tasks/configure_beats.yaml
+++ b/roles/elk_stack/tasks/configure_beats.yaml
@@ -10,6 +10,8 @@
 
 - name: configure_beats | Load Filebeat Kibana Dashboard
   command: /usr/bin/filebeat setup -e -E output.logstash.enabled=false -E output.elasticsearch.hosts=['{{ server_ip}}:{{ elastic_port}}'] -E setup.kibana.host={{ server_ip }}:{{ kibana_port }}
+  changed_when: false
 
 - name: configure_beats | Load Auditbeat Kibana Dashboard
   command: /usr/bin/auditbeat setup -e -E output.logstash.enabled=false -E output.elasticsearch.hosts=['{{ server_ip}}:{{ elastic_port}}'] -E setup.kibana.host={{ server_ip }}:{{ kibana_port }}
+  changed_when: false
