--- a/roles/elk_stack/tasks/configure_kibana.yaml
+++ b/roles/elk_stack/tasks/configure_kibana.yaml
@@ -2,7 +2,7 @@
 - name: configure_kibana | Load Vars
   include_vars: "main.yml"
 
-- name: configure_kibana | Configure port and elastic URL
+- name: configure_kibana | Configure Kibana Host/Port
   lineinfile:
     path: "{{ kibana_conf }}"
     state: present
@@ -11,10 +11,43 @@
     owner: root
     group: root
     line: '{{ item }}'
-  with_items:
+  loop:
     - 'server.host: "{{ server_ip }}"'
     - 'server.port: {{ kibana_port }}'
-    - 'elasticsearch.hosts: ["http://{{ server_ip }}:{{ elastic_port}}"]'
+
+- name: configure_kibana | Configure Elastic URL
+  lineinfile:
+    path: "{{ kibana_conf }}"
+    state: present
+    line: 'elasticsearch.hosts: ["http://{{ server_ip }}:{{ elastic_port}}"]'
+  when: not ssl_on
+
+- name: configure_kibana | Configure SSL For Kibana (if SSL True)
+  lineinfile:
+    path: "{{ kibana_conf }}"
+    state: present
+    line: "{{ item }}"
+  loop:
+    - "elasticsearch.ssl.certificateAuthorities: {{ kibana_cert_location }}{{ cert_ca_chain_name }}"
+    - "server.ssl.enabled: true"
+    - "server.ssl.key: {{ kibana_cert_location }}{{ cert_pem_key_name }}"
+    - "server.ssl.certificate: {{ kibana_cert_location }}{{ cert_pem_crt_name }}"
+  when: ssl_on
+
+- name: configure_kibana | Replace Host Entry with HTTPS (if SSL True)
+  replace:
+    path: "{{ kibana.conf }}"
+    regexp: 'elasticsearch.hosts: \["http://{{ server_ip }}:{{ elastic_port}}"]'
+    replace: 'elasticsearch.hosts: ["https://{{ server_ip }}:{{ elastic_port}}"]'
+  when: ssl_on
+
+#in case configuration wasn't previously http -- or is new setup
+- name: configure_kibana | Ensure Elasticsearch.hosts Line Present (if SSL True)
+  lineinfile:
+    path: "{{ kibana_conf }}"
+    state: present
+    line: 'elasticsearch.hosts: ["https://{{ server_ip }}:{{ elastic_port}}"]'
+  when: ssl_on
 
 - name: configure_kibana | Start Kibana Service
   service:
