--- a/roles/elk_stack/tasks/install_sw_debian.yaml
+++ b/roles/elk_stack/tasks/install_sw_debian.yaml
@@ -25,7 +25,7 @@
     owner: root
     group: root
     line: "{{ item }}"
-  with_items:
+  loop:
     - "deb https://artifacts.elastic.co/packages/7.x/apt stable main"
     - "deb [arch=amd64] https://packages.elastic.co/curator/5/debian stable main"
 
@@ -45,7 +45,7 @@
     rule: allow
     port: "{{ item }}"
     proto: tcp
-  with_items:
+  loop:
     - "{{ elastic_port }}"
     - "{{ kibana_port }}"
   when: server_ip != "localhost"
